Update student from

--- a/student-management-system/src/main/resources/templates/students.html
+++ b/student-management-system/src/main/resources/templates/students.html
@@ -51,6 +51,10 @@
             <td th:each="${student.firstName}"></td>
             <td th:each="${student.lastName}"></td>
             <td th:each="${student.email}"></td>
+            <td>
+                <a th:href="@{/students/edit/{id}(id=${student.id})}"
+                class="btn btn-primary">Update</a>
+            </td>
         </tr>
         </tbody>
     </table>
